<resources>
    <string name="app_name">VWO Demo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="str_control">Control</string>
    <string name="str_list_view">(List View)</string>
    <string name="str_grid_view">(Grid View)</string>
    <string name="title_layout_campaign">Sorting Campaign</string>
    <string name="str_variation">Variation</string>
    <string name="vendor_name" formatted="false">by %s</string>
    <string name="email">Email ID</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="or">or</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="str_signup">Sign up for new account</string>
    <string name="title_variable_campaign">Variable Campaign</string>
    <string name="title_email">(Email)</string>
    <string name="title_social">(Social Media)</string>
    <string name="title_skip">(Skip)</string>
    <string name="str_skip_and_continue">Skip and Continue</string>
    <string name="price_format" formatted="false">%s%d</string>


    <string name="text_in_stock">\u2022 In Stock</string>
    <string name="text_out_of_stock">\u2022 Out of Stock</string>
    <string name="cod_available">\u2022 Cash on Delivery available</string>
    <string name="cod_not_available">\u2022 Cash on Delivery not available</string>
    <string name="str_available_in">\u2022 Also available in Space Grey and Rose Grey</string>
    <string name="buy_now">Buy Now</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="txt_variant" formatted="false">• %s</string>
    <string name="login_success">Login successful</string>
    <string name="login_skipped">Login Skipped</string>
    <string name="choose_campaign">Choose a Campaign</string>
    <string name="settings">Settings</string>
    <string name="clear_data">Clear data</string>
    <string name="str_enter_api_key">Enter API Key</string>
    <string name="error_api_key">Enter a valid API Key</string>
    <string name="api_key_set">API key set</string>
    <string name="title_api_key">Launch VWO</string>

    <string name="str_current_api_key" formatted="false">Current api key: %s</string>
    <string name="confirm">Confirm</string>
    <string name="clear_data_message">Are you sure you want to clear app data?</string>
    <string name="clear_data_negative">Cancel</string>
    <string name="clear_data_positive">Yes</string>
    <string name="data_cleared">Data cleared</string>
    <string name="dialog_house_message">You can use our in-house agents who can help you find a suitable house.</string>
    <string name="dialog_house_title">Use our House Agent!</string>
    <string name="dialog_house_button" formatted="false">Upgrade with %s%d</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="logout">Logout</string>
</resources>
