<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/text_view_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/email"
            android:textColor="@color/primary_text"
            app:layout_constraintStart_toStartOf="@+id/edit_text_email"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edit_text_email"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="28dp"
            android:background="@drawable/rectangle_grey"
            android:ems="10"

            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textCursorDrawable="@color/white"
            android:cursorVisible="true"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_email" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/text_view_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/password"
            android:textColor="@color/primary_text"
            app:layout_constraintStart_toStartOf="@+id/edit_text_password"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_email" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edit_text_password"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="28dp"
            android:background="@drawable/rectangle_grey"
            android:ems="10"
            android:cursorVisible="true"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textCursorDrawable="@color/white"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_password" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/text_view_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/forgot_password"
            android:textColor="@color/vwo_brown"
            app:layout_constraintStart_toStartOf="@+id/edit_text_password"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_password" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_login"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="36dp"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="28dp"
            android:background="@drawable/rectangle_green"
            android:padding="8dp"
            android:text="@string/login"
            android:textColor="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_forgot_password" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/text_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/or"
            android:textColor="@color/primary_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_login" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_facebook_login"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="28dp"
            android:background="@drawable/rectangle_blue"
            android:padding="8dp"
            android:text="@string/login_with_facebook"
            android:textColor="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_or" />


        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/str_signup"
            android:textColor="@color/vwo_brown"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:paddingBottom="16dp"
            app:layout_constraintTop_toBottomOf="@+id/button_facebook_login" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_skip"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:text="@string/str_skip_and_continue"
            android:textColor="@color/primary_text"
            android:background="@drawable/hollow_button_background"
            android:drawableRight="@drawable/right_arrow"
            android:drawableEnd="@drawable/right_arrow"
            android:drawablePadding="10dp"
            app:layout_constraintTop_toBottomOf="@+id/signup"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>