<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="mobile"
            type="com.vwo.sampleapp.models.Mobile" />
    </data>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:id="@+id/nested_scroll_item_details"
        tools:context=".fragments.FragmentItemDetails">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraint_item_details"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/item_details_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:adjustViewBounds="true"
                android:paddingTop="16dp"
                android:src="@drawable/iphone"
                app:src="@{mobile.imageId}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/details_item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:text="@{mobile.name}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_details_image"
                tools:text="iPhone 6 (16GB, Black)" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/details_item_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="@color/red"
                android:text="@{mobile.price}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/details_item_name"
                tools:text="$399" />

            <RatingBar
                android:id="@+id/detail_item_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:isIndicator="true"
                android:numStars="5"
                android:rating="@{mobile.rating}"
                android:stepSize="1"
                android:theme="@style/RatingBar"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/details_item_price" />

            <View
                android:id="@+id/divider_view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:background="@color/divider"
                app:layout_constraintTop_toBottomOf="@+id/detail_item_rating" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/text_view_instock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                app:inStock="@{mobile.inStock}"
                android:textColor="@color/green"
                android:textSize="10sp"
                tools:text="@string/text_in_stock"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.123"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider_view" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/delivery_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                app:codAvailable="@{mobile.codAvailable}"
                tools:text="@string/cod_available"
                android:textSize="10sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/text_view_instock"
                app:layout_constraintTop_toBottomOf="@+id/text_view_instock" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/variants_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                tools:text="@string/str_available_in"
                android:textSize="10sp"
                app:variants="@{mobile.variantDetails}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/delivery_text"
                app:layout_constraintTop_toBottomOf="@+id/delivery_text" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/button_buy"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="36dp"
                android:background="@drawable/buy_button_background"
                android:text="@string/buy_now"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/variants_text_view" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/button_add_to_cart"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/add_to_cart_background"
                android:text="@string/add_to_cart"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_buy"
                app:layout_constraintVertical_bias="0.0" />

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/button_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_close_black" />


        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>
</layout>